--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Three.JS FBX Loader</title><script defer="defer" src="bundle.8df8a197b017211e02da.js"></script><link href="main.css" rel="stylesheet"></head><body><div id="root"><div id="webgl-container"></div><div id="panel-controls">Use w,s,a,d to move, Shift to run, Space to dance.</div><div id="loading-container"><div class="loader"></div><span class="loader-text">L O A D I N G</span></div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Three.js TypeScript Tutorials by Sean Bradley</title>
+        <style>
+            body {
+                overflow: hidden;
+                margin: 0px;
+            }
+        </style>
+    </head>
+
+    <body>
+        <script type="module" src="bundle.js"></script>
+    </body>
+</html>
